--- a/index.html
+++ b/index.html
@@ -36,23 +36,32 @@
 </head>
 
 <body>
-  <a href="https://t.me/Naga78Kh" class="register-img">
-    <img src="image/150.png" alt="" class="promotion_150">
-  </a>
+<div class="register-btn-container">
+  <button class="promotion-btn" id="openModalBtn">🎁 សាកល្បងទាយហ្វី</button>
+</div>
 
-  <div class="contact-resiter">
+<!-- Modal structure -->
+<div id="myModal" class="modal">
+  <div class="modal-content">
+    <span class="close-btn" id="closeModalBtn">&times;</span>
+    <img src="image/GUESS COCK 1_.jpg" alt="Animated Gif" class="modal-gif" />
+  </div>
+</div>
+
+  <!-- <div class="contact-resiter">
     <a href="https://t.me/Naga78Kh">
       <img src="image/registerBtn.png" alt="Register Button" width="200px">
     </a>
     <a href="https://t.me/Naga78Kh" target="_blank" class="ml-2">
       <img src="image/contactBtn.png" alt="Contact Button" width="200px">
     </a>
-  </div>
+  </div> -->
 
-  <!-- <div class="info-button">
-  <a href="https://example.com" class="extra-info-btn" target="_blank">ព័ត៌មានបន្ថែម</a>
-</div> -->
-
+<div class="extra-buttons-row">
+  <a href="https://t.me/Naga78Kh" target="_blank" class="extra-button red">🔴 Meron</a>
+  <a href="https://t.me/Naga78Kh" target="_blank" class="extra-button draw">🟢 Draw</a>
+  <a href="https://t.me/Naga78Kh" target="_blank" class="extra-button blue">🔵 Wala</a>
+</div>
   <div class="social-links">
     <a href="https://www.facebook.com/NG78KH" class="social-icon fb" target="_blank">
       <i class='bx bxl-facebook'></i>
@@ -64,74 +73,5 @@
       <i class='bx bx-globe'></i>
     </a>
   </div>
-
+<script src="script.js"></script>
 </body>
-
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="naga78,the best entertainment website">
-  <meta name="keywords"
-    content="naga78,cock fighting,dengan,games,dalam,SCR888,mudah,scr888,scr888th,scr888 mega888,scr888 test id,scr888 ios,scr888 apk,scr888 png,scr888 game list,918kiss,918kiss login,918kiss png,918kiss game,918kiss plus,918kiss game list,918kiss test id,918kiss logo,918kiss logo png,918kiss apk download,918kiss ori,citibet,citibet88,citibet login,citibet horse racing malaysia,citibet agent,citibet horse racing,maxbet,maxbet338,maxbet88,maxbet268,maxbet prediction,maxbet app,maxbet login,maxbet kladionica,maxbet sport,កាស៊ីណូម៉ាឡេស៊ី,bluetronics siem reap,កាស៊ីណូម៉ាឡេស៊ី,ហ្គេមកាស៊ីណូ,ស្លតអនឡាញ,vprogame 2020,2mkh,www 2mbet live,2mkhmer,2mbet live,2mbet khmer,2mbet login,2mbet log in,f88 live,f88 live login,2mbet live,lynsbobet,www 855bet,855sport,fafa338,2mbet log in,k9win cambodia,2mbet login,fafa889,k9win,k9winkh,casino online,k9win cambodia,f88 live,f88 live login,Casino Online,Game Online,Games Online,Best Games online 2023,Best Game Online 2023,Best Casino Online 2023,ជល់មាន់,ជល់មាន់ផ្សាយផ្ទាល់,ជល់មាន់ផ្សាយផ្ទាល់ 2023,Baccarat,Slot,Lotto,Lottory,Sport,Footbal,បាល់ទាត់,ហ្គេមបាល់,មាន់ជល់ Live,បៀរ,ភ្នាល់បៀរ,បាល់,ភ្នាល់បាល់,ប៉ាការ៉ាត់,ជល់មាន់,ស្លត់,ឡូតូ,Website Casino ល្អបំផុត,Online Casino ល្អបំផុត 2023,សេវាកម្មស្មោះត្រង់,រហ័ស,សុវត្ថិភាព,ដកងាយ,ដាក់ងាយ,ដកងាយ ដាក់ងាយ,ដាក់ប្រាក់ 24 ម៉ោង,ដកប្រាក់ 24 ម៉ោង,ដាក់ប្រាក់ - ដកប្រាក់ 24 ម៉ោង,cock001,cf88,cf88 live,naga78,naga78,i1fun,sa88,fafa855,ល្បែង Online,ល្បែងអនឡាញ,ឆ្នោត Online,ឆ្នោតអនឡាញ,ឆ្នោតខ្មែរ,ឆ្នោតថៃ,ឆ្នោតយួន,ឆ្នោតវៀតណាម,Lotto90,Lotto90Khmer,Lotto888,Lotto8888,Lottery,Lottery Online,Lottery5678,Jakpot,Big Win,Mega Millions,megaMillions">
-
-  <link rel="stylesheet" href="style.css" />
-  <title>Naga78</title>
-  <link rel="shortcut icon" href="/assets/images/icon-naga78.png" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-
-  <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '633536716368916');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=633536716368916&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
-</head>
-
-<body>
-  <a href="https://t.me/Naga78Kh" class="register-img">
-    <img src="image/150.png" alt="" class="promotion_150">
-  </a>
-
-  <div class="contact-resiter">
-    <a href="https://t.me/Naga78Kh">
-      <img src="image/registerBtn.png" alt="Register Button" width="200px">
-    </a>
-    <a href="https://t.me/Naga78Kh" target="_blank" class="ml-2">
-      <img src="image/contactBtn.png" alt="Contact Button" width="200px">
-    </a>
-  </div>
-
-  <!-- <div class="info-button">
-  <a href="https://example.com" class="extra-info-btn" target="_blank">ព័ត៌មានបន្ថែម</a>
-</div> -->
-
-  <div class="social-links">
-    <a href="https://www.facebook.com/NG78KH" class="social-icon fb" target="_blank">
-      <i class='bx bxl-facebook'></i>
-    </a>
-    <a href="https://t.me/Naga78Kh" class="social-icon telegram" target="_blank">
-      <i class='bx bxl-telegram'></i>
-    </a>
-    <a href="https://naga78.pro//login?link=73983_1722664981813" class="social-icon web" target="_blank">
-      <i class='bx bx-globe'></i>
-    </a>
-  </div>
-
-</body>
-
-</html>
