--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <div id="myModal" class="modal">
   <div class="modal-content">
     <span class="close-btn" id="closeModalBtn">&times;</span>
-    <img src="image/GUESS COCK 1_.jpg" alt="Animated Gif" class="modal-gif" />
+    <img src="image/motion-tween-example.gif" alt="Animated Gif" class="modal-gif" />
   </div>
 </div>
 
