--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
       src="https://www.facebook.com/tr?id=633536716368916&ev=PageView&noscript=1" /></noscript>
   <!-- End Meta Pixel Code -->
 </head>
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
 <body>
+   <!-- <div class="congrats-overlay" id="congratsOverlay">
+    <div class="confetti-box">
+      🎉 សូមអបអរសាទរ! 🎉<br>សាកល្បងទាយហ្វីបានជោគជ័យ!
+    </div>
+  </div> -->
 <div class="register-btn-container">
   <button class="promotion-btn" id="openModalBtn">🎁 សាកល្បងទាយហ្វី</button>
 </div>
@@ -59,7 +65,7 @@
 
 <div class="extra-buttons-row">
   <a href="https://t.me/Naga78Kh" target="_blank" class="extra-button red">🔴 Meron</a>
-  <a href="https://t.me/Naga78Kh" target="_blank" class="extra-button draw">🟢 Draw</a>
+  <!-- <a href="https://t.me/Naga78Kh" target="_blank" class="extra-button draw">🟢 Draw</a> -->
   <a href="https://t.me/Naga78Kh" target="_blank" class="extra-button blue">🔵 Wala</a>
 </div>
   <div class="social-links">
