--- a/index.html
+++ b/index.html
@@ -48,10 +48,21 @@
 
 <!-- Modal structure -->
 <div id="myModal" class="modal">
-  <div class="modal-content">
+  <!-- <div class="modal-content">
     <span class="close-btn" id="closeModalBtn">&times;</span>
     <img src="image/motion-tween-example.gif" alt="Animated Gif" class="modal-gif" />
-  </div>
+    
+    
+  </div> -->
+  <div class="modal-content">
+  <span class="close-btn" id="closeModalBtn">&times;</span>
+  
+  <!-- Video autoplay, muted, and loop -->
+  <video class="modal-video" controls autoplay muted loop playsinline>
+    <source src="image/video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
 </div>
 
   <!-- <div class="contact-resiter">
