--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
   </div> -->
 <div class="register-btn-container">
-  <button class="promotion-btn" id="openModalBtn">🎁 សាកល្បងទាយហ្វី</button>
+  <button class="promotion-btn" id="openModalBtn">🎁 សាកល្បងទាយហ្វ្រី </button>
 </div>
 
 <!-- Modal structure -->
