--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   <span class="close-btn" id="closeModalBtn">&times;</span>
   
   <!-- Video autoplay, muted, and loop -->
-  <video class="modal-video" controls autoplay muted loop playsinline>
-    <source src="image/video.mp4" type="video/mp4">
+  <video class="modal-video" autoplay muted loop playsinline>
+    <source src="image/Guesscock.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 </div>
