--- a/index.html
+++ b/index.html
@@ -50,15 +50,21 @@
 
 <!-- Modal structure -->
 <div id="myModal" class="modal">
-  <div class="modal-content">
+  <!-- <div class="modal-content">
     <span class="close-btn" id="closeModalBtn">&times;</span>
+    <img src="image/motion-tween-example.gif" alt="Animated Gif" class="modal-gif" />
     
-    <!-- Video autoplay, muted, and loop -->
-    <video id="modalVideo" class="modal-video" autoplay muted loop playsinline>
-      <source src="image/Guesscock.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
+    
+  </div> -->
+  <div class="modal-content">
+  <span class="close-btn" id="closeModalBtn">&times;</span>
+  
+  <!-- Video autoplay, muted, and loop -->
+  <video class="modal-video" autoplay muted loop playsinline>
+    <source src="image/Guesscock.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+  </video>
+</div>
 </div>
 
   <!-- <div class="contact-resiter">
@@ -82,7 +88,7 @@
     <a href="https://t.me/Naga78Kh" class="social-icon telegram" target="_blank">
       <i class='bx bxl-telegram'></i>
     </a>
-    <a href="https://naga78.pro//login?link=73983_1722664981813" class="social-icon web" target="_blank">
+    <a href="https://naga78.online//login?link=73983_1722664981813" class="social-icon web" target="_blank">
       <i class='bx bx-globe'></i>
     </a>
   </div>
