change tele agent1

--- a/index.html
+++ b/index.html
@@ -79,18 +79,18 @@
   </div> -->
 
   <div class="extra-buttons-row">
-    <a href="https://t.me/Naga78Kh" target="_blank" class="extra-button red">🔴 Meron</a>
+    <a href="https://t.me/naga78Agent1" target="_blank" class="extra-button red">🔴 Meron</a>
     <!-- <a href="https://t.me/Naga78Kh" target="_blank" class="extra-button draw">🟢 Draw</a> -->
-    <a href="https://t.me/Naga78Kh" target="_blank" class="extra-button blue">🔵 Wala</a>
+    <a href="https://t.me/naga78Agent1" target="_blank" class="extra-button blue">🔵 Wala</a>
   </div>
   <div class="social-links">
     <a href="https://www.facebook.com/NG78KH" class="social-icon fb" target="_blank">
       <i class='bx bxl-facebook'></i>
     </a>
-    <a href="https://t.me/Naga78Kh" class="social-icon telegram" target="_blank">
+    <a href="https://t.me/naga78Agent1" class="social-icon telegram" target="_blank">
       <i class='bx bxl-telegram'></i>
     </a>
-    <a href="https://naga78.online//login?link=73983_1722664981813" class="social-icon web" target="_blank">
+    <a href="https://naga78.site//login?link=73983_1722664981813" class="social-icon web" target="_blank">
       <i class='bx bx-globe'></i>
     </a>
   </div>
