--- a/index.html
+++ b/index.html
@@ -1,20 +1,46 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <meta name="description" content="naga78,the best entertainment website">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+   <!-- Required meta -->
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+  <!-- Primary SEO -->
+  <title>Naga78 – ល្បែងកាស៊ីណូអនឡាញល្អបំផុត ប្រចាំឆ្នាំ 2025</title>
+  <meta name="description"
+        content="លេងបាល់ | ប៉ាការ៉ាត់ | ស្លត | ជល់មាន់ | ឆ្នោតអនឡាញ ជាមួយសេវាកម្មស្មោះត្រង់ ដក-ដាក់ប្រាក់ 24-ម៉ោង | Naga78.com" />
   <meta name="keywords"
-    content="naga78,cock fighting,dengan,games,dalam,SCR888,mudah,scr888,scr888th,scr888 mega888,scr888 test id,scr888 ios,scr888 apk,scr888 png,scr888 game list,918kiss,918kiss login,918kiss png,918kiss game,918kiss plus,918kiss game list,918kiss test id,918kiss logo,918kiss logo png,918kiss apk download,918kiss ori,citibet,citibet88,citibet login,citibet horse racing malaysia,citibet agent,citibet horse racing,maxbet,maxbet338,maxbet88,maxbet268,maxbet prediction,maxbet app,maxbet login,maxbet kladionica,maxbet sport,កាស៊ីណូម៉ាឡេស៊ី,bluetronics siem reap,កាស៊ីណូម៉ាឡេស៊ី,ហ្គេមកាស៊ីណូ,ស្លតអនឡាញ,vprogame 2020,2mkh,www 2mbet live,2mkhmer,2mbet live,2mbet khmer,2mbet login,2mbet log in,f88 live,f88 live login,2mbet live,lynsbobet,www 855bet,855sport,fafa338,2mbet log in,k9win cambodia,2mbet login,fafa889,k9win,k9winkh,casino online,k9win cambodia,f88 live,f88 live login,Casino Online,Game Online,Games Online,Best Games online 2023,Best Game Online 2023,Best Casino Online 2023,ជល់មាន់,ជល់មាន់ផ្សាយផ្ទាល់,ជល់មាន់ផ្សាយផ្ទាល់ 2023,Baccarat,Slot,Lotto,Lottory,Sport,Footbal,បាល់ទាត់,ហ្គេមបាល់,មាន់ជល់ Live,បៀរ,ភ្នាល់បៀរ,បាល់,ភ្នាល់បាល់,ប៉ាការ៉ាត់,ជល់មាន់,ស្លត់,ឡូតូ,Website Casino ល្អបំផុត,Online Casino ល្អបំផុត 2023,សេវាកម្មស្មោះត្រង់,រហ័ស,សុវត្ថិភាព,ដកងាយ,ដាក់ងាយ,ដកងាយ ដាក់ងាយ,ដាក់ប្រាក់ 24 ម៉ោង,ដកប្រាក់ 24 ម៉ោង,ដាក់ប្រាក់ - ដកប្រាក់ 24 ម៉ោង,cock001,cf88,cf88 live,naga78,naga78,i1fun,sa88,fafa855,ល្បែង Online,ល្បែងអនឡាញ,ឆ្នោត Online,ឆ្នោតអនឡាញ,ឆ្នោតខ្មែរ,ឆ្នោតថៃ,ឆ្នោតយួន,ឆ្នោតវៀតណាម,Lotto90,Lotto90Khmer,Lotto888,Lotto8888,Lottery,Lottery Online,Lottery5678,Jakpot,Big Win,Mega Millions,megaMillions">
+        content="naga78, casino online, k9win, 2mbet, cock fighting, baccarat, slot, lotto, scr888, 918kiss, cf88, f88 live, Cambodia casino, កាស៊ីណូម៉ាឡេស៊ី, កាស៊ីណូអនឡាញ, ជល់មាន់, ឆ្នោតខ្មែរ, game online, live cockfight, mega888, 855bet, maxbet, fafa338" />
 
+  <!-- Open Graph / Facebook / Telegram / Line -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://naga78.site/" />
+  <meta property="og:title"
+        content="Naga78 – ល្បែងកាស៊ីណូអនឡាញល្អបំផុត ប្រចាំឆ្នាំ 2025" />
+  <meta property="og:description"
+        content="លេងល្បែងកាស៊ីណូជាក់ស្ដែងបំផុតនៅកម្ពុជា – ប៉ាការ៉ាត់, ស្លត, ជល់មាន់, បាល់, ឆ្នោត – ដក-ដាក់ 24-ម៉ោង!" />
+  <meta property="og:site_name" content="Naga78" />
+  <!-- Use an absolute URL for the preview image -->
+  <meta property="og:image" content="https://naga78.site/assets/images/ng-casino.jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="628" />
+  <meta property="og:image:type" content="image/jpeg" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://naga78.site/" />
+  <meta name="twitter:title"
+        content="Naga78 – ល្បែងកាស៊ីណូអនឡាញល្អបំផុត" />
+  <meta name="twitter:description"
+        content="លេងបាល់ • ប៉ាការ៉ាត់ • ស្លត • ជល់មាន់ • ឆ្នោតអនឡាញ – សេវាកម្មស្មោះត្រង់ រហ័ស សុវត្ថិភាព" />
+  <meta name="twitter:image" content="https://naga78.site/assets/images/ng-casino.jpeg" />
+
+  <!-- Stylesheets & Icons -->
+  <link rel="shortcut icon" href="/assets/images/icon-naga78.png" type="image/x-icon" />
   <link rel="stylesheet" href="style.css" />
-  <title>Naga78</title>
-  <link rel="shortcut icon" href="/assets/images/icon-naga78.png" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
 
   <!-- Meta Pixel Code -->
   <script>
