--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:url" content="https://naga78.site/" />
   <meta name="twitter:title"
-        content="Naga78 – ល្បែងកាស៊ីណូអនឡាញល្អបំផុត" />
+        content="Naga78 ទាយមាន់ FREE FREE" />
   <meta name="twitter:description"
         content="លេងបាល់ • ប៉ាការ៉ាត់ • ស្លត • ជល់មាន់ • ឆ្នោតអនឡាញ – សេវាកម្មស្មោះត្រង់ រហ័ស សុវត្ថិភាព" />
   <meta name="twitter:image" content="https://naga78.site/assets/images/ng-casino.jpeg" />
