--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Primary SEO -->
-  <title>Naga78 – ល្បែងកាស៊ីណូអនឡាញល្អបំផុត ប្រចាំឆ្នាំ 2025</title>
+  <title>ទាយមាន់ FREE FREE ស្បាយៗៗ</title>
   <meta name="description"
         content="លេងបាល់ | ប៉ាការ៉ាត់ | ស្លត | ជល់មាន់ | ឆ្នោតអនឡាញ ជាមួយសេវាកម្មស្មោះត្រង់ ដក-ដាក់ប្រាក់ 24-ម៉ោង | Naga78.com" />
   <meta name="keywords"
@@ -17,7 +17,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://naga78.site/" />
   <meta property="og:title"
-        content="Naga78 – ល្បែងកាស៊ីណូអនឡាញល្អបំផុត ប្រចាំឆ្នាំ 2025" />
+        content="ទាយមាន់ FREE FREE ស្បាយៗៗ" />
   <meta property="og:description"
         content="លេងល្បែងកាស៊ីណូជាក់ស្ដែងបំផុតនៅកម្ពុជា – ប៉ាការ៉ាត់, ស្លត, ជល់មាន់, បាល់, ឆ្នោត – ដក-ដាក់ 24-ម៉ោង!" />
   <meta property="og:site_name" content="Naga78" />
